[package]
name = "kvarn-extensions-example"
authors = ["Icelk <main@icelk.dev>"]
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kvarn = { git = "https://github.com/Icelk/kvarn", features = ["full"] }
tokio = { version = "^1", features = ["macros"] }
env_logger = "^0.8"
